# Cpp-Algorithm-and-Programing

./: README.md
Algorithm/Damereau-Levenstein-distance/: main.cpp
Algorithm/Quadtree/: README.txt
Algorithm/Quadtree/quadtree/: example.cpp  quadtree.h
Algorithm/Quadtree/villes/: CMakeLists.txt  README.txt  example.cpp  neighbors.h  point2d.cpp  point2d.h  quadrant.h  square.h  town.cpp  town.h  villes.txt
Algorithm/Quadtree/zipimage/: CMakeLists.txt  example.cpp
Algorithm/Town case study/: CMakeLists.txt  isotopo.cpp  point2d.cpp  point2d.h  town.cpp  town.h  villes.txt
Algorithm/Tree Implementation/: CMakeLists.txt  IntTree.cpp  IntTree.h  main.cpp
Programing/Function allocation/: CMakeLists.txt  Fonction.cpp  Fonction.h  main.cpp
Programing/Matrix/: main.cpp  matrix.cpp  matrix.h
Programing/Programming/: CMakeLists.txt  main.cpp  option.h
Programing/Work2/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
